@@ -7,6 +7,9 @@ ggplot2 0.9.3.1.99
 * `ggpcp()`, `ggfluctuation()`, `ggmissing()`, `ggstructure()`, and
   `ggorder()` are now defunct and have been removed.
 
+* theme: new theme settings panel.margin.x and panel.margin.y (units) allow
+  specifying horizontal and vertical gap between panels in facetted plots (for
+  both grid and wrap).  (Kirill Müller. Fixes #839)
 
 ggplot2 0.9.3.1
 ----------------------------------------------------------------
